@@ -182,25 +182,39 @@ static char* pair_write(pair_t*p, int max_depth, int readable){
   return sl_value(l);
 }
 
-static int symbol_equal_p(object_t*, object_t*);
 static char* symbol_write(symbol_t*, int, int);
+static char* keyword_write(symbol_t*, int, int);
 static const dfsch_type_t symbol_type = {
   DFSCH_STANDARD_TYPE,
   sizeof(symbol_t), 
   "symbol",
-  (dfsch_type_equal_p_t)symbol_equal_p,
+  NULL,
   (dfsch_type_write_t)symbol_write
 };
+static const dfsch_type_t keyword_type = {
+  DFSCH_STANDARD_TYPE,
+  sizeof(symbol_t), 
+  "keyword",
+  NULL,
+  (dfsch_type_write_t)keyword_write
+};
 #define SYMBOL (&symbol_type) 
-static int symbol_equal_p(object_t* a, object_t* b){
-  return a == b;
-}
+#define KEYWORD (&keyword_type) 
 static char* symbol_write(symbol_t* s, int max_depth, int readable){
   if (s->data){
     return s->data;
   } else {
     char* buf = GC_MALLOC_ATOMIC(64);
     snprintf(buf, 64, "#<gensym 0x%x>", s);
+    return buf;
+  }
+}
+static char* keyword_write(symbol_t* s, int max_depth, int readable){
+  if (s->data){
+    return s->data;
+  } else {
+    char* buf = GC_MALLOC_ATOMIC(64);
+    snprintf(buf, 64, "#<genkey 0x%x>", s);
     return buf;
   }
 }
@@ -335,6 +349,16 @@ int dfsch_symbol_p(dfsch_object_t* obj){
   if (!obj)
     return 0;
   return obj->type == SYMBOL;
+}
+int dfsch_keyword_p(dfsch_object_t* obj){
+  if (!obj)
+    return 0;
+  return obj->type == KEYWORD;
+}
+int dfsch_symbol_or_keyword_p(dfsch_object_t* obj){
+  if (!obj)
+    return 0;
+  return obj->type == SYMBOL || obj->type == KEYWORD;
 }
 int dfsch_primitive_p(dfsch_object_t* obj){
   if (!obj)
@@ -957,7 +981,17 @@ static symbol_finalizer(symbol_t* symbol, void* cd){
 }
 
 static symbol_t* make_symbol(char *symbol){
-  symbol_t *s = (symbol_t*)dfsch_make_object(SYMBOL);
+  symbol_t *s;
+
+  if (!symbol){
+    return dfsch_gensym();
+  }
+
+  if (*symbol && *symbol ==':'){
+    s = (symbol_t*)dfsch_make_object(KEYWORD);
+  } else {
+    s = (symbol_t*)dfsch_make_object(SYMBOL);
+  }
 
   GC_REGISTER_FINALIZER(s, 
                         (GC_finalization_proc)symbol_finalizer, NULL, 
@@ -978,7 +1012,7 @@ static symbol_t* make_symbol(char *symbol){
 
 
 void dfsch_unintern(dfsch_object_t* symbol){
-  if (symbol->type != SYMBOL)
+  if (symbol->type != SYMBOL && symbol->type != KEYWORD)
     dfsch_throw("exception:not-a-symbol", symbol);
 
   free_symbol((symbol_t*)symbol);
@@ -986,6 +1020,13 @@ void dfsch_unintern(dfsch_object_t* symbol){
 
 dfsch_object_t* dfsch_gensym(){
   symbol_t *s = (symbol_t*)dfsch_make_object(SYMBOL);
+
+  s->data = NULL;
+
+  return (object_t*)s;
+}
+dfsch_object_t* dfsch_genkey(){
+  symbol_t *s = (symbol_t*)dfsch_make_object(KEYWORD);
 
   s->data = NULL;
 
@@ -1012,10 +1053,37 @@ dfsch_object_t* dfsch_make_symbol(char* symbol){
 
 }
 char* dfsch_symbol(dfsch_object_t* symbol){
-  if (!symbol || symbol->type!=SYMBOL)
+  if (!symbol || (symbol->type!=SYMBOL && symbol->type!=KEYWORD))
     dfsch_throw("exception:not-a-symbol", symbol);
 
   return ((symbol_t*)symbol)->data;
+}
+dfsch_object_t* dfsch_symbol_2_keyword(dfsch_object_t* symbol){
+  if (!symbol || symbol->type!=SYMBOL)
+    dfsch_throw("exception:not-a-symbol", symbol);
+
+  if (!((symbol_t*)symbol)->other){
+    if (!((symbol_t*)symbol)->data){
+      return dfsch_genkey();
+    }
+    
+    ((symbol_t*)symbol)->other = dfsch_make_symbol(stracat(":", ((symbol_t*)symbol)->data));
+  }
+
+  return ((symbol_t*)symbol)->other;
+}
+dfsch_object_t* dfsch_keyword_2_symbol(dfsch_object_t* symbol){
+  if (!symbol || symbol->type!=KEYWORD)
+    dfsch_throw("exception:not-a-keyword", symbol);
+
+  if (!((symbol_t*)symbol)->other){
+    if (!((symbol_t*)symbol)->data || !*(((symbol_t*)symbol)->data)){
+      return dfsch_gensym();
+    }
+
+    ((symbol_t*)symbol)->other =dfsch_make_symbol(((symbol_t*)symbol)->data+1);
+  }
+  return ((symbol_t*)symbol)->other;
 }
 int dfsch_compare_symbol(dfsch_object_t* symbol,
                          char* string){
